--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Request Webcam Access</title>
+  <title>Stream Me Softly</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     * {
@@ -148,7 +148,7 @@
 
   <div class="card">
     <div class="webcam-icon">🎥</div>
-    <h1>Webcam Access Request</h1>
+    <h1>Stream Me Softly</h1>
     <h2>Remote Team Collaboration Zone</h2>
     <p>
       To view this exclusive livestream of me typing furiously, pretending not to Google things, and nodding strategically—please subscribe.
